# gipc

./: .gitattributes  .gitignore  Cargo.toml
examples/: Cargo.toml  README.md  build.rs
examples/proto/: hello.proto
examples/src/: main.rs
gipc/: Cargo.toml  README.md
gipc/src/: api_method.rs  error.rs  lib.rs  message.rs  server_builder.rs  test_utils.rs
gipc/src/ipc/: mod.rs
ipc/: Cargo.toml
ipc/src/: README.md  client.rs  executor.rs  ipc.rs  lib.rs  test_utils.rs
ipc/src/server/: mod.rs  server.rs  windows.rs
ipc/src/server/windows/: client_wrapper.rs  completion_port.rs  event.rs  future.rs  handle.rs  ipc.rs  ipc_server_wrapper.rs  mod.rs  named_pipe.rs  overlapped.rs
ipc/src/windows/: completion_port.rs  handle.rs  ipc.rs  mod.rs  named_pipe.rs  overlapped.rs
tools/: Cargo.toml  build.rs
