[package]
name = "ipc"
version = "0.1.0"
authors = ["rickwebiii <rick.weber.iii@gmail.com>"]
edition = "2018"
#path="src/lib.rs"

[dependencies]
futures-preview = "0.3.0-alpha.11"
ipc-channel = "0.11.2"
log = "0.4.6"

[dependencies.winapi]
version = "0.3.6"
features = ["errhandlingapi", "handleapi", "ioapiset", "minwindef", "namedpipeapi", "synchapi", "winbase", "winerror"]

[dev-dependencies]
simplelog = "0.5.3"
