[package]
name = "ipc"
version = "0.1.0"
authors = ["rickwebiii <rick.weber.iii@gmail.com>"]
edition = "2018"

[features]
debug_assertions = []

[dependencies]
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread"] }

[dependencies.winapi]
version = "0.3.7"
features = ["errhandlingapi", "handleapi", "ioapiset", "minwindef", "namedpipeapi", "synchapi", "winbase", "winerror"]

[dev-dependencies]
simplelog = "0.5.3"
log = "0.4.6"